fix profile text-overflow

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -42,6 +42,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 373px;
 }
 
 .profile__edit-button {
@@ -64,6 +65,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 373px;
 }
 
 .profile__add-button {
